home-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-app
spec:
  replicas: 2
  selector:
    matchLabels:
      run: home-app
  template:
    metadata:
      labels:
        run: home-app
    spec:
      containers:
      - name: home-app
        image: gcr.io/leagueai/home-app:v1
        imagePullPolicy: Always
      nodeSelector:
        component: web
