home-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-nodeport-service
spec:
  selector:
    run: "home-app"
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
